Added moar docs!

--- a/docs/first.bib
+++ b/docs/first.bib
@@ -26,3 +26,11 @@ division-modulo-by-constant-operations},
 	howpublished={http://de.wikipedia.org/wiki/Binärbaum},
 	note={Eingesehen am 31.01.2015}	
 }
+@misc{wikibook1:7,
+	howpublished={http://en.wikibooks.org/wiki/X86\_Assembly},
+	note={Eingesehen am 08.02.2015}
+}
+@misc{wikibook2:8,
+	howpublished={http://en.wikibooks.org/wiki/X86\_Disassembly},
+	note={Eingesehen am 08.02.2015}
+}
