--- a/docs/first.tex
+++ b/docs/first.tex
@@ -209,11 +209,14 @@ allerdings nicht minder notwendig, da nur auf diese Weise Gegenmaßnahmen untern
 die von simplen Desinfektionsroutinen bis hin zu komplexen Erkennungsalgorithmen und Signatursystemen
 reichen. Ein weiterer Aspekt, der diese Aufgabenstellung so bedeutend macht ist die Tatsache, dass
 Malware schon seit einiger Zeit eine enorme Bedrohung nicht nur für die Computer privater Nutzer, sondern
-auch für Unternehmen und staatliche Einrichtungen darstellt.
-
-Aus diesem Grund
-werden bereits seit einiger Zeit Ansätze unternommen, diesen Vorgang so weit wie möglich zu automatisieren.
-Die Hauptargumente für eine solche Vorgehensweise sind, dass die Wiederherstellung von Kontrollfluss,
+auch für Unternehmen und staatliche Einrichtungen darstellt. Zusammenfassend lässt sich die Situation
+folgendermaßen beschreiben: Es eistiert eine Vielzahl von sinnvollen und gegebenenfalls luktrativen
+Anwendungsmöglichkeiten für zumindest teilweise automatisierte Programmanalyse. Gleichzeitig sind die
+Produkte, die die daraus resultierende Nachfrage abdecken sollen, für einige der Nischen nicht oder nur
+wenig geeignet, was einen anderen Ansatz zur Lösung der Problemstellung erfordert, der auch im vorliegenden
+Projekt verfolgt werden soll. Allerdings ist an dieser Stelle eine grundsätziche Erläterung der Methoden,
+die bereits existierender Software des Themenfelds zugruneliegt, angemessen.
+Die Hauptargumente für eine automatisierte Vorgehensweise sind, dass die Wiederherstellung von Kontrollfluss,
 Variablen, Funktionen und weiteren HLL\footnote{High Level Language, also Programmiersprache mit hohem
 Abstraktionsgrad, bekannte Beispiele für kompilierte HLL's sind C, C++ und Java}-spezifischen Strukturen
 ohnehin nicht komplett möglich ist, das Ergebnis also bloß eine Annäherung an den Originalcode sein kann.
@@ -283,9 +286,7 @@ Modifikation sehr einfach zu bewerkstelligen ist. Beispielsweise sind so ohne We
 Eingabeparsing-Module denkbar, als die bereits mitgelieferten. Ebenfalls kann die Analyse um weitere
 Aspekte des zu untersuchenden Programms erweitert werden, sollte dies sich als notwendig
 herausstellen.
-%\newpage
 \begin{figure}[h!]
-%	\centering
 		\dirtree{%
 		.1 Iridium (Eingabeparsing-Module).
 		.2 defines (Behälter für Submodule).
@@ -561,7 +562,13 @@ einem kompletten und fehlerfreien Produkt gesprochen werden. Konkret stehen noch
 		bereits teilweise umgesetzt, ob tatsächlich weitere Umstrukturierungen notwendig sind,
 		wird sich mit der Weiterentwicklung zeigen.}
 	\item{Gegebenenfalls sollte eine Unterstützung von \textit{break}, \textit{continue},
-		\textit{goto} und \textit{return} in die Kontrollflussanalyse eingebunden werden.}
+		\textit{goto} und \textit{return} in die Kontrollflussanalyse eingebunden werden.
+		Generall kann derzeit von keiner Unterstützung für nicht wohlstrkturierte Programme
+		gesprochen werden. Diese sind allerdings recht häufig anzutreffen, weswegen zumindest
+		der Ansatz einer Unterstützung notwendig wäre, um die Verwendung des Projekts in der
+		Praxis zu vereinfachen. Dies würde allerdings eine Änderung am Algorithmus des
+		Kontrollflussanalysemoduls erfordern und ist daher noch nicht in Angriff genommen worden.
+	}
 	\item{Derzeit unterstützt das Projekt keine Sprünge an zur Laufzeit berechnete Adressen. Gegebenenfalls
 		sollte eine Unterstützung für diese Strukturen implementiert werden. Zur Zeit ist dies
 		jedoch vermutlich nicht notwendig, da solche Sprünge aufgrund ihrer recht geringen Effizienz
@@ -570,7 +577,7 @@ einem kompletten und fehlerfreien Produkt gesprochen werden. Konkret stehen noch
 Gleichzeitig ist das Projekt durchaus recht weit seiner Fertigstellung fortgeschritten, unter
 anderem, da alle Features einem sehr gründlichen System an Testläufen unterzogen wurden, die auch
 auf Integration mit dem Restsystem ausgerichtet sind, was bedeutet, dass Tests, die einzelnen
-Bausteinen eines Moduls gelten so konzipiet sind, dass aus ihren Ergebnissen auf das Verhalten des
+Bausteinen eines Moduls gelten so konzipiert sind, dass aus ihren Ergebnissen auf das Verhalten des
 Systems in veränderten Kontexten geschlossen werden kann. Auf diese Weise wird verhndert, dass
 einzelne Fehler in bestimmten Eingabekonfigurationen auftreten können. Dies ist besonders für das
 Kontrollflussanalysemodul wichtig, da dieses mit Abstand am komplexesten ist, weswegen auch
